Add external UI URL

--- a/charts/unbind/values.yaml
+++ b/charts/unbind/values.yaml
@@ -134,6 +134,8 @@ api:
     enabled: false  # We're using the combined ingress
   command: ["/app/api"]
   env:
+    - name: EXTERNAL_UI_URL
+      value: "https://unbind.example.com"
     - name: EXTERNAL_API_URL
       value: "https://unbind.example.com/api"
     - name: EXTERNAL_WILDCARD_BASE_URL
