--- a/helmfile.yaml
+++ b/helmfile.yaml
@@ -858,6 +858,8 @@ releases:
             enabled: false  # Using the combined ingress
           command: ["/app/api"]
           env:
+            - name: EXTERNAL_UI_URL
+              value: {{ printf "https://unbind.%s" .Values.baseDomain }}
             - name: EXTERNAL_API_URL
               value: {{ printf "https://unbind.%s/api" .Values.baseDomain }}
             - name: EXTERNAL_WILDCARD_BASE_URL
