--- a/helmfile.yaml
+++ b/helmfile.yaml
@@ -435,6 +435,7 @@ releases:
             use-forwarded-headers: "true"
             compute-full-forwarded-for: "true"
             use-proxy-protocol: "false"
+            allow-snippet-annotations: "true"
         rbac:
           create: true
           scope: false
